fix: horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 @import "../node_modules/tachyons";
 @import "../node_modules/ipfs-css";
 
-body {
-  overflow-x: hidden;
-}
-
 .App {
   background: rgb(2,46,68);
   background: linear-gradient(120deg, rgba(2,46,68,1) 70%, rgba(102,208,219,1) 70%);
